okay, stopping now. Maybe try a sentence transformer? Also, pip freeze this in office

--- a/bertopic.ipynb
+++ b/bertopic.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +29,8 @@
       "[nltk_data] Downloading package stopwords to\n",
       "[nltk_data]     /Users/Joshua/nltk_data...\n",
       "[nltk_data]   Package stopwords is already up-to-date!\n",
-      "[nltk_data] Downloading package wordnet to /Users/Joshua/nltk_data...\n"
+      "[nltk_data] Downloading package wordnet to /Users/Joshua/nltk_data...\n",
+      "[nltk_data]   Package wordnet is already up-to-date!\n"
      ]
     }
    ],
@@ -46,7 +47,8 @@
     "nltk.download('wordnet')\n",
     "\n",
     "# import BERTopic\n",
-    "from bertopic import BERTopic"
+    "from bertopic import BERTopic\n",
+    "from umap import UMAP"
    ]
   },
   {
@@ -99,21 +101,233 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Generating topic model"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "OMP: Info #276: omp_set_nested routine deprecated, please use omp_set_max_active_levels instead.\n"
+      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
+      "To disable this warning, you can either:\n",
+      "\t- Avoid using `tokenizers` before the fork if possible\n",
+      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n",
+      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
+      "To disable this warning, you can either:\n",
+      "\t- Avoid using `tokenizers` before the fork if possible\n",
+      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n",
+      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
+      "To disable this warning, you can either:\n",
+      "\t- Avoid using `tokenizers` before the fork if possible\n",
+      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n",
+      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
+      "To disable this warning, you can either:\n",
+      "\t- Avoid using `tokenizers` before the fork if possible\n",
+      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n",
+      "2024-06-15 23:09:52,656 - BERTopic - WARNING: When you use `pickle` to save/load a BERTopic model,please make sure that the environments in which you saveand load the model are **exactly** the same. The version of BERTopic,its dependencies, and python need to remain the same.\n"
      ]
     }
    ],
    "source": [
     "topic_model = BERTopic()\n",
-    "topics, probs = topic_model.fit_transform(lemmatized_tokens)"
+    "topics, probs = topic_model.fit_transform(lemmatized_tokens)\n",
+    "topic_model.save(\"model\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Visualising data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Topic</th>\n",
+       "      <th>Count</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Representation</th>\n",
+       "      <th>Representative_Docs</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-1</td>\n",
+       "      <td>2198</td>\n",
+       "      <td>-1_spotted_habit_victoria_form</td>\n",
+       "      <td>[spotted, habit, victoria, form, pencil, dazed...</td>\n",
+       "      <td>[spotted, spotted, habit]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1724</td>\n",
+       "      <td>0_said_stated__</td>\n",
+       "      <td>[said, stated, , , , , , , , ]</td>\n",
+       "      <td>[said, said, said]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>475</td>\n",
+       "      <td>1_looked___</td>\n",
+       "      <td>[looked, , , , , , , , , ]</td>\n",
+       "      <td>[looked, looked, looked]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2</td>\n",
+       "      <td>449</td>\n",
+       "      <td>2_thought___</td>\n",
+       "      <td>[thought, , , , , , , , , ]</td>\n",
+       "      <td>[thought, thought, thought]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3</td>\n",
+       "      <td>437</td>\n",
+       "      <td>3_eleanor_mildred__</td>\n",
+       "      <td>[eleanor, mildred, , , , , , , , ]</td>\n",
+       "      <td>[Eleanor, Eleanor, Eleanor]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1458</th>\n",
+       "      <td>1457</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1457_crossing_crisscrossed__</td>\n",
+       "      <td>[crossing, crisscrossed, , , , , , , , ]</td>\n",
+       "      <td>[crossing, crossing, crossing]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1459</th>\n",
+       "      <td>1458</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1458_litter_cat__</td>\n",
+       "      <td>[litter, cat, , , , , , , , ]</td>\n",
+       "      <td>[litter, litter, litter]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1460</th>\n",
+       "      <td>1459</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1459_mend_mended_wedd_loosed</td>\n",
+       "      <td>[mend, mended, wedd, loosed, dandy, shepherded...</td>\n",
+       "      <td>[mend, mend, mend]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1461</th>\n",
+       "      <td>1460</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1460_eleanor___</td>\n",
+       "      <td>[eleanor, , , , , , , , , ]</td>\n",
+       "      <td>[Eleanor, Eleanor, Eleanor]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1462</th>\n",
+       "      <td>1461</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1461_gainsborough_pont_norfolk_sussex</td>\n",
+       "      <td>[gainsborough, pont, norfolk, sussex, bordeaux...</td>\n",
+       "      <td>[Gainsborough, Gainsborough, Gainsborough]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1463 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Topic  Count                                   Name  \\\n",
+       "0        -1   2198         -1_spotted_habit_victoria_form   \n",
+       "1         0   1724                        0_said_stated__   \n",
+       "2         1    475                            1_looked___   \n",
+       "3         2    449                           2_thought___   \n",
+       "4         3    437                    3_eleanor_mildred__   \n",
+       "...     ...    ...                                    ...   \n",
+       "1458   1457     10           1457_crossing_crisscrossed__   \n",
+       "1459   1458     10                      1458_litter_cat__   \n",
+       "1460   1459     10           1459_mend_mended_wedd_loosed   \n",
+       "1461   1460     10                        1460_eleanor___   \n",
+       "1462   1461     10  1461_gainsborough_pont_norfolk_sussex   \n",
+       "\n",
+       "                                         Representation  \\\n",
+       "0     [spotted, habit, victoria, form, pencil, dazed...   \n",
+       "1                        [said, stated, , , , , , , , ]   \n",
+       "2                            [looked, , , , , , , , , ]   \n",
+       "3                           [thought, , , , , , , , , ]   \n",
+       "4                    [eleanor, mildred, , , , , , , , ]   \n",
+       "...                                                 ...   \n",
+       "1458           [crossing, crisscrossed, , , , , , , , ]   \n",
+       "1459                      [litter, cat, , , , , , , , ]   \n",
+       "1460  [mend, mended, wedd, loosed, dandy, shepherded...   \n",
+       "1461                        [eleanor, , , , , , , , , ]   \n",
+       "1462  [gainsborough, pont, norfolk, sussex, bordeaux...   \n",
+       "\n",
+       "                             Representative_Docs  \n",
+       "0                      [spotted, spotted, habit]  \n",
+       "1                             [said, said, said]  \n",
+       "2                       [looked, looked, looked]  \n",
+       "3                    [thought, thought, thought]  \n",
+       "4                    [Eleanor, Eleanor, Eleanor]  \n",
+       "...                                          ...  \n",
+       "1458              [crossing, crossing, crossing]  \n",
+       "1459                    [litter, litter, litter]  \n",
+       "1460                          [mend, mend, mend]  \n",
+       "1461                 [Eleanor, Eleanor, Eleanor]  \n",
+       "1462  [Gainsborough, Gainsborough, Gainsborough]  \n",
+       "\n",
+       "[1463 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "topic_model = BERTopic.load(\"model\")\n",
+    "\n",
+    "topic_model.get_topic_info()\n"
    ]
   }
  ],
