managed to get BERTopic modelling working, but output makes little sense

--- a/laundromat.ipynb
+++ b/laundromat.ipynb
@@ -22,19 +22,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
     "import os\n",
     "from pprint import pprint as pp\n",
     "import string\n",
     "\n",
     "# import nltk\n",
     "import nltk\n",
-    "from nltk import pos_tag\n",
     "from nltk.tokenize import word_tokenize\n",
     "from nltk.corpus import stopwords\n",
-    "from nltk.stem import WordNetLemmatizer\n",
-    "\n",
-    "import nbformat"
+    "from nltk.stem import WordNetLemmatizer\n"
    ]
   },
   {
@@ -115,7 +111,7 @@
     "extended_punctuation = set(string.punctuation) | {'“', '”', '’', '‘', '—', '…', '\\'', '`'}\n",
     "\n",
     "def remove_stopwords(words):\n",
-    "  return [word for word in words if not word.lower() in default_stopwords_set]\n",
+    "  return [word for word in words if word.lower() not in default_stopwords_set]\n",
     "\n",
     "def remove_punctuation(words):\n",
     "    return [word for word in words if word not in string.punctuation]\n",
